<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.home.treefrogapps.bindingtoolbox.BindingTypesFragment"
    android:background="@color/bg_main">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:background="@color/bg_main">


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/bg_main"></LinearLayout>

            <TableRow>

                <TextView
                    android:id="@+id/binding_types_header"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/main_text"
                    android:text="@string/binding_types_header" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/bg_main"></LinearLayout>

            <TableRow android:background="@color/actionbar">

                <TextView
                    android:id="@+id/binding_types_perfect_binding"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="@color/white_text"
                    android:textSize="18sp"
                    android:text="@string/perfect_binding" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/bg_main"></LinearLayout>

            <TableRow>

                <TextView
                    android:id="@+id/binding_types_perfect_binding_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/main_text"
                    android:text="@string/perfect_binding_2" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/bg_main"></LinearLayout>

            <TableRow android:background="@color/actionbar">

                <TextView
                    android:id="@+id/binding_types_pur_binding"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="@color/white_text"
                    android:textSize="18sp"
                    android:text="@string/pur_binding" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/bg_main"></LinearLayout>

            <TableRow>

                <TextView
                    android:id="@+id/binding_types_pur_binding_text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/main_text"
                    android:text="@string/pur_binding_2" />
            </TableRow>


        </TableLayout>
    </ScrollView>


</RelativeLayout>
